Add convert for single provider with get route, Update readme
